@@ -487,6 +487,17 @@ extern BOOL __thread_safe_errno_h_errno;
  */
 extern BOOL __expand_wildcard_args;
 
+/*
+ * Similar to the boolean flag value __expand_wildcard_args described above,
+ * a function can be called which may be used to enable/disable wildcard
+ * expansion at runtime. The function is undefined by default, which means
+ * that the __expand_wildcard_args value will take precedence. If you want
+ * to override the effects of the __expand_wildcard_args variable, declare
+ * your own check function and then assign it to the
+ * __expand_wildcard_args_check pointer.
+ */
+extern BOOL (*__expand_wildcard_args_check)(void);
+
 /****************************************************************************/
 
 /*
